# ig-like-app

clients_emulator/: .gitignore  pyproject.toml
clients_emulator/clients_emulator/: async_requestor.py  client_abuser.yaml  entrypoint.py  requestor.py
clients_emulator/docker/: gunicorn_server.dockerfile
clients_emulator/server_dummy/: backend_app_server.yaml  server_gunicorn.py
instagram-like/: docker-compose.yaml  pyproject.toml
instagram-like/docker/: ig_app_services.Dockerfile  init-ig-like-w-migrations.sh
instagram-like/docker/postgres/: NOTUSED-sql_app_services_postgresdb.Dockerfile  NOUTUSED-init-postgres.Dockerfile  init-postgres.sh
instagram-like/instagram_like/: alembic.ini  database.py  entrypoint.py  models.py  schemas.py
instagram-like/instagram_like/migrations/: env.py
instagram-like/instagram_like/migrations/versions/: 2ef634f7acdd_init.py
instagram-like/k8s/: app-services.yaml  postgres.yaml  sql_app_services_postgresdb_configmap.yaml
