[tool.poetry]
name = "clients-emulator"
version = "0.1.0"
description = ""
authors = ["xavi <xpeiro92@gmail.com>"]
readme = "README.md"
packages = [{include = "clients_emulator"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.server.dependencies]
gunicorn = "^21.2.0"

[tool.poetry.group.client.dependencies]
requests = "^2.31.0"
aiohttp = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
