[tool.poetry]
name = "instagram-like"
version = "0.1.0"
description = ""
authors = ["xavi <xpeiro92@gmail.com>"]
readme = "README.md"
packages = [{include = "instagram_like"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.110.1", extras = ["all"]}
psycopg2 = "2.9.9"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
